# benchmark-kafka-rust-lib

./: Cargo.toml  docker-compose-ssl.yml  docker-compose.yml
benches/: benchmark_kafka_lib.rs
broker-certs/: broker_kafka-bench-ssl_server.keystore.jks  broker_kafka-bench-ssl_server.truststore.jks
src/: main.rs
