[package]
name = "kafka_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
chrono = "0.4.39"
derive-new = "0.7.0"
kafka = "0.10.0"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark_kafka_lib"
harness = false
